kubernetes-exercises/deployments-ingress/start/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: backend
  name: backend
spec:
  containers:
    - image: ghcr.io/eficode-academy/quotes-flask-backend:release
      name: quotes-flask-backend
      resources: {}
  restartPolicy: Always
