kubernetes-exercises/deployments-ingress/start/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  containers:
    - image: ghcr.io/eficode-academy/quotes-flask-frontend:release
      name: frontend
      resources: {}
  restartPolicy: Always
