kubernetes-exercises/deployments-ingress/start/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: backend
  name: backend
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    run: backend
  type: ClusterIP
